--- a/qml.qrc
+++ b/qml.qrc
@@ -50,6 +50,6 @@
         <file>Components/Model/TextFieldNew.qml</file>
         <file>Components/Model/Segmentation.qml</file>
         <file>Components/Model/Rename.qml</file>
-        <file>Components/Screenwallcomponent.qml</file>
+        <file>Components/Sgcomponent.qml</file>
     </qresource>
 </RCC>
