半年前已经可以完成郑工要求的原型机

--- a/qml.qrc
+++ b/qml.qrc
@@ -55,5 +55,6 @@
         <file>Components/pictures/background3.jpg</file>
         <file>Components/pictures/background4.jpg</file>
         <file>Components/Model/Changeresolution.qml</file>
+        <file>Components/pictures/background5.jpg</file>
     </qresource>
 </RCC>
